# ChangeLog for media-sound/clementine
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jan 2012; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild,
  metadata.xml:
  update, upstream migrated from ofa to chromaprint

  05 Jan 2012; Nikoli <nikoli@lavabit.com> -clementine-1.0.0_rc1.ebuild,
  clementine-9999.ebuild:
  update deps, gio works fine now

  05 Dec 2011; Nikoli <nikoli@lavabit.com> clementine-1.0.0_rc1.ebuild,
  clementine-9999.ebuild:
  gmock is not optional

*clementine-1.0.0_rc1 (04 Dec 2011)

  04 Dec 2011; Nikoli <nikoli@lavabit.com> +clementine-1.0.0_rc1.ebuild,
  clementine-9999.ebuild, metadata.xml:
  version bump, add cdda and kde use flags, use system gmock

  03 Aug 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild,
  metadata.xml:
  upstream removed scripting, fix deps for USE remote

  03 Aug 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  upstream migrated to git

  06 Jul 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild,
  metadata.xml:
  add mms and ofa USE, TODO was removed

  15 May 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  sync with portage

  26 Mar 2011; Nikoli <nikoli@lavabit.com> -clementine-0.7_rc1.ebuild,
  -files/clementine-0.7_rc1-tests-liblastfm.patch, clementine-9999.ebuild:
  0.7 rc1 is in portage, update libechonest dep

*clementine-0.7_rc1 (25 Mar 2011)

  25 Mar 2011; Nikoli <nikoli@lavabit.com> +clementine-0.7_rc1.ebuild,
  +files/clementine-0.7_rc1-tests-liblastfm.patch, clementine-9999.ebuild:
  version bump, remove tunepimp dep, migrate to EAPI 4

  15 Mar 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  upstream fixed most tests

  09 Mar 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  update deps, add tests

  26 Dec 2010; Nikoli <nikoli@lavabit.com> -clementine-0.6-r1.ebuild,
  -clementine-0.6-r2.ebuild,
  -files/clementine-0.6-optional-dbus-devicekit.patch,
  -files/clementine-0.6-optional-liblastfm.patch: