@@ -1,3 +1,0 @@
-EBUILD clementine-9999.ebuild 3683 RMD160 3a4ea40d58e0041b4121221da75f6d84450d2ec4 SHA1 4d72e4499e5e9a09965c2d5c17ce8112802347f0 SHA256 350d84b96d4b899dae233dcc9406f7514446b944f7faaa7af3a8d45c754779d6
-MISC ChangeLog 4845 RMD160 0dc7337aab1ff94ddf7deea9e247a85a1f99c51a SHA1 bb35a120b974390bb6201a1790d0d27c8830e5b9 SHA256 ec94e6fceddbe6449aebeae056b07bb06822b0924adde036dcd403da967d43cf
-MISC metadata.xml 729 RMD160 a86d67b8204118147ab5234ab8f001d5e95711e0 SHA1 2247b5989cfc6cc2e15ab0797013afccde5250eb SHA256 6993d39054aea32e1c89d8f8b0d4d4c5cae17e9822b1fea268e288dd10956c28
