@@ -7,7 +7,6 @@
     <name>Nikoli</name>
   </maintainer>
   <use>
-    <flag name="ayatana">Build in support for Ayatana notification using the libindicate-qt plugin.</flag>
     <flag name="kde">Enable plasma krunner global search</flag>
     <flag name="lastfm">Use liblastfm for fetching song info, scrobbling and radio streams</flag>
     <flag name='projectm'>Build with ProjectM visualization</flag>
